Fixed the registration button so it doesn't get too big and fixed the intel logo

--- a/web/styles/index.css
+++ b/web/styles/index.css
@@ -105,6 +105,7 @@
   display: block;
   margin: 25px auto;
   min-width: 200px;
+  max-width: 400px;
   width: 75%;
   border-radius: 12px;
   background-color: #981e32;
